--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container-fluid">
-  	<a class="nav-link active" aria-current="page" href="/therachatfronend/index.html"><img src="logo.svg" height="40vh" width="40vw"></a>
-    <a class="navbar-brand" href="/therachatfronend/index.html">TheraChat</a>
+  	<a class="nav-link active" aria-current="page" href="/therachatfrontend/index.html"><img src="logo.svg" height="40vh" width="40vw"></a>
+    <a class="navbar-brand" href="/therachatfrontend/index.html">TheraChat</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -24,16 +24,16 @@
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
  
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="/therachatfronend/index.html">Home</a>
+          <a class="nav-link active" aria-current="page" href="/therachatfrontend/index.html">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/therachatfronend/about.html">About</a>
+          <a class="nav-link" href="/therachatfrontend/about.html">About</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/therachatfronend/contact.html">Contact Us</a>
+          <a class="nav-link" href="/therachatfrontend/contact.html">Contact Us</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/therachatfronend/faq.html">FAQ</a>
+          <a class="nav-link" href="/therachatfrontend/faq.html">FAQ</a>
         </li>
       </ul>
       <!-- chatnow modal -->
@@ -146,7 +146,7 @@ Login
 </div>
 <div class="inline">
 	<h1 class="display-1" style="font-size: 4vw">Getting Help</h1>
-	<h1 class="display-6" style="font-size: 3vw;"> Sometimes you need to talk things through.</h1>
+	<h1 class="display-6" style="font-size: 2vw;"> Sometimes you need to talk things through.</h1>
 </p>
 </div>
 
@@ -275,7 +275,7 @@ Login
                     <div class="col-xl-4 col-lg-4 mb-50">
                         <div class="footer-widget">
                             <div class="footer-logo">
-                                <a href="/therachatfronend/index.html"><img src="https://www.flaticon.com/svg/static/icons/svg/2728/2728279.svg" class="img-fluid" alt="logo"></a>
+                                <a href="/therachatfrontend/index.html"><img src="https://www.flaticon.com/svg/static/icons/svg/2728/2728279.svg" class="img-fluid" alt="logo"></a>
                             </div>
                             <div class="footer-text">
                                 <p>Support Us On Social Media ,Hope You Like Our Website And If You Have Query Or Issue Then Contact Us Without Hesitation.  </p>
@@ -295,10 +295,10 @@ Login
                                 <h3>Useful Links</h3>
                             </div>
                             <ul>
-                                <li><a href="/therachatfronend/index.html">Home</a></li>                             
-                                <li><a href="/therachatfronend/contact.html">Contact</a></li>
-                                <li><a href="/therachatfronend/about.html">About us</a></li>     
-                                 <li><a href="/therachatfronend/faq.html">FAQ</a></li>                                                
+                                <li><a href="/therachatfrontend/index.html">Home</a></li>                             
+                                <li><a href="/therachatfrontend/contact.html">Contact</a></li>
+                                <li><a href="/therachatfrontend/about.html">About us</a></li>     
+                                 <li><a href="/therachatfrontend/faq.html">FAQ</a></li>                                                
                             </ul>
                         </div>
                     </div>
