--- a/contact.html
+++ b/contact.html
@@ -166,17 +166,17 @@ Login
 <div style="margin-left: 1vw;"class="contactform">
   <h1 class="display-6" style="font-size: 3vw;">Chat With Us</h1>
   <form  class="form-container" style="">
-  <p class="lead"   style=" margin-top: 20vh;font-size: 1vw;height: 2vw;margin-bottom: 1vh;background-color: #ff80b9;
+ <p class="lead"   style=" margin-top: 20vh;font-size: 1vw;margin-bottom: 1vh;background-color: #ff80b9;
   border-radius: 10vw;
   width: 10vw;
-  padding-left: 1vw;" ><img src="cc.svg" style="height: 4vh" >
+  padding-left: 1vw;" ><img src="cc.svg" height="20vh" width="20vw" >
   Hello! </p>
-  <p class="lead"   style=" margin-bottom: 1vh;font-size: 1vw;height: 2vw;float: right; background-color: #99bdff;
+  <p class="lead"   style=" margin-bottom: 1vh;font-size: 1vw;float: right; background-color: #99bdff;
   border-radius: 10vw;
   width: 10vw;
   padding-left: 1vw;" >
-  Hello! <img src="face.svg" height="20vh" width="20vw" style="margin-left: 3vw;height: 4vh"> </p>
-    <figcaption class="blockquote-footer" style="margin-top: 3vh;font-size: 1vw;">We Will Try To Reply As Soon As Possible</figcaption>
+  Hello! <img src="face.svg" height="20vh" width="20vw" style="margin-left: 3vw;"> </p>
+    <figcaption class="blockquote-footer" style="margin-top: 3vh;font-size: 1vw;height: 1vw">We Will Try To Reply As Soon As Possible</figcaption>
      <input class="form-control" style="font-size: 1vw;" type="text" placeholder="Enter Your Message" >
  <button type="button" class="btn btn-primary" style="float: right;font-size: 1.5vw;margin-top: 2vh">Send</button>
   </form>
