--- a/about.html
+++ b/about.html
@@ -2,14 +2,18 @@
 <html lang="en">
   <head>
   	<link rel="stylesheet" type="text/css" href="style.css">
+     <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css'>
+    <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Rubik&amp;display=swap'>
+    <link rel='stylesheet' href='https://fonts.googleapis.com/icon?family=Material+Icons'>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
+<script src="https://cdnjs.cloudflare.com/ajax/libs/prefixfree/1.0.7/prefixfree.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
 
     <title>TheraChat An AI Chatbot</title>
    <link rel = "icon" href = "logo.svg"type = "image/x-icon"> 
   </head>
+ 
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container-fluid">
@@ -35,6 +39,7 @@
       </ul>
   <!-- chatnow modal -->
       <!-- Button trigger modal -->
+
 <button type="button" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#staticBackdropchatnow" style="margin-right: 1vw;">
  Chat Now
 </button>
@@ -44,29 +49,31 @@
   <div class="modal-dialog" style="float: right;">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="staticBackdropLabel">TheraChat</h5>
+        <h5> Chat Now</h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
- <form  class="form-container">
-  <p class="lead"   style=" margin-top: 20vh;margin-bottom: 1vh;background-color: #ff80b9;
-  border-radius: 10vw;
-  width: 10vw;
-  padding-left: 1vw;" ><img src="logo.svg" height="20vh" width="20vw" >
-  Hello! </p>
-  <p class="lead"   style=" margin-bottom: 1vh;float: right; background-color: #99bdff;
-  border-radius: 10vw;
-  width: 10vw;
-  padding-left: 1vw;" >
-  Hello! <img src="face.svg" height="20vh" width="20vw" style="margin-left: 3vw;"> </p>
-     <input class="form-control" type="text" placeholder="Enter Your Message" >
-
-  </form>
+        <div class="container">
+  <div class="row">
+    <div class="col msg-window-container">
+      <div class="card" id="msgWindow">       
+        <div class="card-body" id="msgs">
+          <div class="msg to">Hello! How can I assist you today?</div>
+        </div>
+        <div class="card-footer">
+          <div class="input-group" id="msgForm" data-sender="me">
+            <input class="form-control" type="text" placeholder="Type message and hit [Enter] to send."/>
+            <div class="input-group-append">
+              <button class="btn btn-outline-secondary" type="button">Send</button>
+            </div>
+          </div>
+        </div>
       </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-outline-secondary" data-bs-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Send</button>
+    </div>
+  </div>
+</div>
       </div>
+     
     </div>
   </div>
 </div>
@@ -138,10 +145,15 @@ Login
   </div>
 </nav>
 <!--new code after -->
+
+<!-- text -->
+
 <h1 class="display-4" style="margin-bottom: 5vh;margin-right:7vw;margin-left: 7vw;">About Us</h1>
+  </div>
+</div>
 <p class="lead" style="text-transform: capitalize; margin-right: 7vw;margin-left: 7vw;">TheraChat Is an web application that helps you to overcome stress, depression and general mental health isssues.gain confidence,inspiration and mentally clear and emotionally calm and stable state.</p>
-    <p class="lead" style="text-transform: capitalize;margin-right: 7vw;margin-left: 7vw;">Our aim is to build an AI-based ‘emotionally intelligent’ bot, a virtual coach whichresponds to the emotions you express and uses evidence-based cognitive-behavioral techniques (CBT), meditation, breathing, yoga, motivational interviewing and micro-actions to help you build mental resilience skills and feel better.</p>
-    <p class="lead" style="text-transform: capitalize; margin-right: 7vw;margin-left: 7vw;">Chatbots are nothing but an intelligent piece of software that can interact and 
+<p class="lead" style="text-transform: capitalize;margin-right: 7vw;margin-left: 7vw;">Our aim is to build an AI-based ‘emotionally intelligent’ bot, a virtual coach whichresponds to the emotions you express and uses evidence-based cognitive-behavioral techniques (CBT), meditation, breathing, yoga, motivational interviewing and micro-actions to help you build mental resilience skills and feel better.</p>
+<p class="lead" style="text-transform: capitalize; margin-right: 7vw;margin-left: 7vw;">Chatbots are nothing but an intelligent piece of software that can interact and 
 communicate with people just like humans. Interesting isn’t it! So now let us understand 
 how they actually work. All the chatbot comes under the NLP (Natural Language 
 Processing) concepts.</p>
@@ -149,10 +161,20 @@ Processing) concepts.</p>
 Makes you feel heard.</p>
 <p class="lead" style="text-transform: capitalize; margin-right: 7vw;margin-left: 7vw;"> People often get depressed when they’re alone so there’s a 24/7 app that can talk with 
 you anytime.</p>
- <p class="lead" style="text-transform: capitalize;margin-left: 7vw;margin-right: 7vw;">You can conatct us without any hesitation through email or chatbox given in <a href="/therachatfrontend/contact.html"> contact us </a>page</p>
+ <p class="lead" style="text-transform: capitalize;margin-left: 7vw;margin-right: 7vw;">You can conatct us without any hesitation through email or chatbox given in <a href="/therachatfronend/contact.html"> contact us </a>page</p>
 
 
+<!-- mood tracker 
 
+
+<div class="container">
+        <i class="material-icons" id="emoji">
+        sentiment_satisfied
+        </i>
+        <input type="range" min="0" max="4" value="2" id="slider">
+    </div>
+	
+-->
 <!-- footer code -->
 <footer class="footer-section">
         <div class="container">
@@ -236,9 +258,13 @@ you anytime.</p>
                         </div>
                     </div>
                 </div>
-            </di
+            </div>
     </footer>
 <!-- ending footer -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
+<script src='https://code.jquery.com/jquery-3.2.1.slim.min.js'></script>
+<script src='https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js'></script>
+<script src='https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/js/bootstrap.min.js'></script>
+<script src='https://cdnjs.cloudflare.com/ajax/libs/babel-polyfill/6.26.0/polyfill.min.js'></script><script  src="my.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
   </body>
 </html>
