--- a/contact.html
+++ b/contact.html
@@ -1,14 +1,18 @@
 <!doctype html>
 <html lang="en">
   <head>
-  	<link rel="stylesheet" type="text/css" href="style.css">
+  
+    <link rel="stylesheet" type="text/css" href="style.css">
+     <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css'>
+    <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Rubik&amp;display=swap'>
+    <link rel='stylesheet' href='https://fonts.googleapis.com/icon?family=Material+Icons'>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
+<script src="https://cdnjs.cloudflare.com/ajax/libs/prefixfree/1.0.7/prefixfree.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
 
     <title>TheraChat An AI Chatbot</title>
-    <link rel = "icon" href = "logo.svg"type = "image/x-icon"> 
+   <link rel = "icon" href = "logo.svg"type = "image/x-icon"> 
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -41,32 +45,34 @@
 
 <!-- Modal -->
 <div class="modal fade" id="staticBackdropchatnow" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabelchatnow" aria-hidden="true">
-  <div class="modal-dialog" style="float: right;font-size: 2vw;">
+  <div class="modal-dialog" style="float: right;">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="staticBackdropLabel">TheraChat</h5>
+        <h5> Chat Now</h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
- <form  class="form-container">
-  <p class="lead"   style=" margin-top: 20vh;margin-bottom: 1vh;font-size: 1vw;background-color: #ff80b9;
-  border-radius: 10vw;
-  width: 10vw;
-  padding-left: 1vw;" ><img src="logo.svg" height="20vh" width="20vw" >
-  Hello! </p>
-  <p class="lead"   style=" margin-bottom: 1vh;font-size: 1vw;float: right; background-color: #99bdff;
-  border-radius: 10vw;
-  width: 10vw;
-  padding-left: 1vw;" >
-  Hello! <img src="face.svg" height="20vh" width="20vw" style="margin-left: 3vw;"> </p>
-     <input class="form-control" type="text" placeholder="Enter Your Message" >
-
-  </form>
+        <div class="container">
+  <div class="row">
+    <div class="col msg-window-container">
+      <div class="card" id="msgWindow">       
+        <div class="card-body" id="msgs">
+          <div class="msg to">Hello! How can I assist you today?</div>
+        </div>
+        <div class="card-footer">
+          <div class="input-group" id="msgForm" data-sender="me">
+            <input class="form-control" type="text" placeholder="Hit [Enter] to send."/>
+            <div class="input-group-append">
+              <button class="btn btn-outline-secondary" type="button">Send</button>
+            </div>
+          </div>
+        </div>
       </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-outline-secondary" data-bs-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Send</button>
+    </div>
+  </div>
+</div>
       </div>
+     
     </div>
   </div>
 </div>
@@ -163,23 +169,26 @@ Login
 </form>
 </div>
 <!-- chat option -->
+
 <div style="margin-left: 1vw;"class="contactform">
   <h1 class="display-6" style="font-size: 3vw;">Chat With Us</h1>
-  <form  class="form-container" style="">
- <p class="lead"   style=" margin-top: 20vh;font-size: 1vw;margin-bottom: 1vh;background-color: #ff80b9;
-  border-radius: 10vw;
-  width: 10vw;
-  padding-left: 1vw;" ><img src="cc.svg" height="20vh" width="20vw" >
-  Hello! </p>
-  <p class="lead"   style=" margin-bottom: 1vh;font-size: 1vw;float: right; background-color: #99bdff;
-  border-radius: 10vw;
-  width: 10vw;
-  padding-left: 1vw;" >
-  Hello! <img src="face.svg" height="20vh" width="20vw" style="margin-left: 3vw;"> </p>
-    <figcaption class="blockquote-footer" style="margin-top: 3vh;font-size: 1vw;height: 1vw">We Will Try To Reply As Soon As Possible</figcaption>
-     <input class="form-control" style="font-size: 1vw;" type="text" placeholder="Enter Your Message" >
- <button type="button" class="btn btn-primary" style="float: right;font-size: 1.5vw;margin-top: 2vh">Send</button>
-  </form>
+  <div class="row">
+    <div class="col msg-window-container">
+      <div class="card" id="msgWindow">       
+        <div class="card-body" id="msgs">
+          <div class="msg to">Hello! How can I assist you today?</div>
+        </div>
+        <div class="card-footer">
+          <div class="input-group" id="msgForm" data-sender="me">
+            <input class="form-control" type="text" placeholder="Hit [Enter] to send."/>
+            <div class="input-group-append">
+              <button class="btn btn-outline-secondary" type="button">Send</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
 <!-- suppport on scial media -->
 <div class="contactform" style="margin-left: 1vw;">
@@ -192,6 +201,16 @@ Login
   <p class="lead" style="margin-top: 10vh;vertical-align: bottom;font-size: 1vw;">Or Mail Us At TheraChat@TheraChat.com</p>
   </div>
 </div>
+<!-- mood 
+
+
+<div class="container">
+        <i class="material-icons" id="emoji">
+        sentiment_satisfied
+        </i>
+        <input type="range" min="0" max="4" value="2" id="slider">
+    </div>
+-->
 <!-- footer code -->
 <footer class="footer-section">
         <div class="container">
@@ -275,9 +294,15 @@ Login
                         </div>
                     </div>
                 </div>
-            </di
+            </div>
     </footer>
 <!-- ending footer -->
+<script src='https://code.jquery.com/jquery-3.2.1.slim.min.js'></script>
+<script src='https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js'></script>
+
+<script src='https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/js/bootstrap.min.js'></script>
+<script src='https://cdnjs.cloudflare.com/ajax/libs/babel-polyfill/6.26.0/polyfill.min.js'></script>
+<script  src="my.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
   </body>
 </html>
