--- a/index.html
+++ b/index.html
@@ -1,16 +1,17 @@
 <!doctype html>
 <html lang="en">
   <head>
-  	<link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
+     <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css'>
+    <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Rubik&amp;display=swap'>
+    <link rel='stylesheet' href='https://fonts.googleapis.com/icon?family=Material+Icons'>
     <meta charset="utf-8">
-    <meta name="description" content="An Emotionally Inteligent Chatbot that Can Talk With You And Make You Feel Heard">
-    
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
+<script src="https://cdnjs.cloudflare.com/ajax/libs/prefixfree/1.0.7/prefixfree.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
 
-    <title> TheraChat An AI Chatbot</title>
-    <link rel = "icon" href = "logo.svg"type = "image/x-icon"> 
+    <title>TheraChat An AI Chatbot</title>
+   <link rel = "icon" href = "logo.svg"type = "image/x-icon"> 
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -47,29 +48,31 @@
   <div class="modal-dialog" style="float: right;">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="staticBackdropLabel">TheraChat</h5>
+        <h5> Chat Now</h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
- <form  class="form-container">
- 	<p class="lead"   style=" margin-top: 20vh;margin-bottom: 1vh;font-size: 2vw; background-color: #ff80b9;
-	border-radius: 10vw;
-	width: 10vw;
-	padding-left: 1vw;" ><img src="logo.svg" height="20vh" width="20vw" >
- 	Hello! </p>
- 	<p class="lead"   style=" margin-bottom: 1vh;font-size: 2vw;float: right; background-color: #99bdff;
-	border-radius: 10vw;
-	width: 13vw;
-	padding-left: 1vw;" >
- 	Hello! <img src="face.svg" height="20vh" width="20vw" style="margin-left: 3vw;"> </p>
-     <input class="form-control" type="text" placeholder="Enter Your Message" >
-
-  </form>
+        <div class="container">
+  <div class="row">
+    <div class="col msg-window-container">
+      <div class="card" id="msgWindow">       
+        <div class="card-body" id="msgs">
+          <div class="msg to">Hello! How can I assist you today?</div>
+        </div>
+        <div class="card-footer">
+          <div class="input-group" id="msgForm" data-sender="me">
+            <input class="form-control" type="text" placeholder="Hit [Enter] to send."/>
+            <div class="input-group-append">
+              <button class="btn btn-outline-secondary" type="button">Send</button>
+            </div>
+          </div>
+        </div>
       </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-outline-secondary" data-bs-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Send</button>
+    </div>
+  </div>
+</div>
       </div>
+     
     </div>
   </div>
 </div>
@@ -140,17 +143,21 @@ Login
     </div>
   </div>
 </nav>
+
 <!--new code after -->
+<span>
 <div class="inline">
 	<img src="discuss.webp" class="img-fluid" alt="Getting Help" >
 </div>
 <div class="inline">
 	<h1 class="display-1" style="font-size: 4vw">Getting Help</h1>
-	<h1 class="display-6" style="font-size: 2vw;"> Sometimes you need to talk things through.</h1>
+	<h1 class="display-6" style="font-size: 2.5vw;"> Sometimes you need to talk things through.</h1>
 </p>
 </div>
-
+</span>
+<br>
 <!-- cards -->
+<span>
 <div class="card" style="width: 18rem;margin-left:2vw;margin-top: 1vh;margin-right:2vw;display: inline-block;">
   <img src="meditation.jpg" class="card-img-top" alt="...">
   <div class="card-body">
@@ -186,6 +193,7 @@ Login
     <a href="#" class="btn btn-primary">Do It Now</a>
   </div>
 </div>
+</span>
 <!-- cards finish -->
 <!-- features start -->
 <h1 class="display-5" style="margin-left: 2vw;margin-bottom: 3vh;margin-top: 2vh;">Some Features Of Our Website:</h1>
@@ -236,6 +244,16 @@ Login
   </a>
 </div>
 <!-- end of carousel -->
+<!-- mood -->
+
+
+<!--<div class="container">
+        <i class="material-icons" id="emoji">
+        sentiment_satisfied
+        </i>
+        <input type="range" min="0" max="4" value="2" id="slider">
+    </div>
+-->
 <!-- footer code -->
 <footer class="footer-section">
         <div class="container">
@@ -319,9 +337,14 @@ Login
                         </div>
                     </div>
                 </div>
-            </di
+            </div>  
     </footer>
 <!-- ending footer -->
+<script src='https://code.jquery.com/jquery-3.2.1.slim.min.js'></script>
+<script src='https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js'></script>
+<script src='https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/js/bootstrap.min.js'></script>
+<script src='https://cdnjs.cloudflare.com/ajax/libs/babel-polyfill/6.26.0/polyfill.min.js'></script>
+<script  src="my.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
   </body>
 </html>
